@@ -80,6 +80,11 @@
 	* added pthread_barrierattr_*() APIs
 	* added pthread_barrier_init(), pthread_barrier_destroy(), and
 	  pthread_barrier_wait();
+	* Added protection so that errno cannot be modified from
+	  interrupt handling.
+	* sched_setparam(), sched_setscheduler() now correctly set
+	  errno; pthread_setscheduler() now returns the correct errno.
+	* Added pthread_setschedprio().
 	* Started m68322
 
 
